figured out all summary calculations except percent overall pass

--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -794,7 +794,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School       3318\n",
+       "Cabrera High School      1749\n",
+       "Figueroa High School     1946\n",
+       "Ford High School         1871\n",
+       "Griffin High School      1371\n",
+       "Hernandez High School    3094\n",
+       "Holden High School        395\n",
+       "Huang High School        1916\n",
+       "Johnson High School      3145\n",
+       "Pena High School          910\n",
+       "Rodriguez High School    2654\n",
+       "Shelton High School      1653\n",
+       "Thomas High School       1525\n",
+       "Wilson High School       2143\n",
+       "Wright High School       1680\n",
+       "Name: student_name, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "per_pass_m = school_data_complete[school_data_complete['math_score'] >= 70].groupby('school_name')['student_name']\n",
+    "per_pass_m.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_pass_r = per_pass_r.count()\n",
+    "count_pass_m = per_pass_m.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +866,7 @@
        "Name: size, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,77 +878,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "school_name\n",
-       "Bailey High School       4976\n",
-       "Cabrera High School      1858\n",
-       "Figueroa High School     2949\n",
-       "Ford High School         2739\n",
-       "Griffin High School      1468\n",
-       "Hernandez High School    4635\n",
-       "Holden High School        427\n",
-       "Huang High School        2917\n",
-       "Johnson High School      4761\n",
-       "Pena High School          962\n",
-       "Rodriguez High School    3999\n",
-       "Shelton High School      1761\n",
-       "Thomas High School       1635\n",
-       "Wilson High School       2283\n",
-       "Wright High School       1800\n",
-       "Name: budget, dtype: int64"
+       "Bailey High School       66.680064\n",
+       "Cabrera High School      94.133477\n",
+       "Figueroa High School     65.988471\n",
+       "Ford High School         68.309602\n",
+       "Griffin High School      93.392371\n",
+       "Hernandez High School    66.752967\n",
+       "Holden High School       92.505855\n",
+       "Huang High School        65.683922\n",
+       "Johnson High School      66.057551\n",
+       "Pena High School         94.594595\n",
+       "Rodriguez High School    66.366592\n",
+       "Shelton High School      93.867121\n",
+       "Thomas High School       93.272171\n",
+       "Wilson High School       93.867718\n",
+       "Wright High School       93.333333\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "school_budget = school_data_complete.groupby(\"school_name\")['budget'].count()\n",
-    "school_budget"
+    "percent_pass_read = ((count_pass_r)/(school_size)*100)\n",
+    "percent_pass_read\n",
+    "\n",
+    "percent_pass_math = ((count_pass_m)/(school_size)*100)\n",
+    "percent_pass_math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "school_name            budget \n",
-       "Bailey High School     3124928    100.0\n",
-       "Cabrera High School    1081356    100.0\n",
-       "Figueroa High School   1884411    100.0\n",
-       "Ford High School       1763916    100.0\n",
-       "Griffin High School    917500     100.0\n",
-       "Hernandez High School  3022020    100.0\n",
-       "Holden High School     248087     100.0\n",
-       "Huang High School      1910635    100.0\n",
-       "Johnson High School    3094650    100.0\n",
-       "Pena High School       585858     100.0\n",
-       "Rodriguez High School  2547363    100.0\n",
-       "Shelton High School    1056600    100.0\n",
-       "Thomas High School     1043130    100.0\n",
-       "Wilson High School     1319574    100.0\n",
-       "Wright High School     1049400    100.0\n",
-       "dtype: float64"
+       "school_name\n",
+       "Bailey High School    628.0\n",
+       "Bailey High School    628.0\n",
+       "Bailey High School    628.0\n",
+       "Bailey High School    628.0\n",
+       "Bailey High School    628.0\n",
+       "                      ...  \n",
+       "Wright High School    583.0\n",
+       "Wright High School    583.0\n",
+       "Wright High School    583.0\n",
+       "Wright High School    583.0\n",
+       "Wright High School    583.0\n",
+       "Length: 39170, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "per_stu_budget = ((school_size)/(school_budget)*100)\n",
+    "school_index = school_data_complete.set_index('school_name')\n",
+    "school_type = school_index['type']\n",
+    "school_budget = school_index['budget']\n",
+    "per_stu_budget = (school_budget)/(school_size)\n",
     "per_stu_budget"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "school_name\n",
+       "Bailey High School    628.0\n",
+       "Bailey High School    628.0\n",
+       "Bailey High School    628.0\n",
+       "Bailey High School    628.0\n",
+       "Bailey High School    628.0\n",
+       "                      ...  \n",
+       "Wright High School    583.0\n",
+       "Wright High School    583.0\n",
+       "Wright High School    583.0\n",
+       "Wright High School    583.0\n",
+       "Wright High School    583.0\n",
+       "Length: 39170, dtype: float64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
